--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 style="color: rgb(34, 74, 75);">Frequently Asked Questions</h1>
       <div class="accordion">
         <dl>
-          <dt><a class="accordionTitle" href="#">Test Simple Flat UI CSS Accordion 1</a></dt>
+          <dt><a class="accordionTitle" href="#">write question here</a></dt>
           <dd class="accordionItem accordionItemCollapsed">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
           </dd>
