--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <header>
+    <!-- header -->
     <h1>
       <span id="span-one">F</span>
       <span id="span-two">A</span>
@@ -22,20 +23,25 @@
 
   <section>
     <div class="container">
+      <!-- faq headline -->
       <h1 style="color: rgb(34, 74, 75);">Frequently Asked Questions</h1>
       <div class="accordion">
+        <!-- similar worked as listing both h tag  and p tag -->
+        <!-- list head -->
         <dl>
-          <dt><a class="accordionTitle" href="#">write question here</a></dt>
+          <!-- list father -->
+          <dt><a class="accordionTitle" href="##">Lorem ipsum dolor sit amet.</a></dt>
+          <!-- list mother -->
+          <dd class="accordionItem accordionItemCollapsed">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam quo quae labore eligendi aperiam ab molestias iste nesciunt, aliquid quos in soluta odio cupiditate numquam ducimus neque dignissimos perferendis nam! Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
+          </dd>
+          <dt><a href="#" class="accordionTitle">Lorem ipsum dolor sit.</a></dt>
           <dd class="accordionItem accordionItemCollapsed">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
           </dd>
-          <dt><a href="#" class="accordionTitle">Test Simple Flat UI CSS Accordion 2</a></dt>
+          <dt><a href="#" class="accordionTitle">Lorem ipsum dolor sit.</a></dt>
           <dd class="accordionItem accordionItemCollapsed">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
-          </dd>
-          <dt><a href="#" class="accordionTitle">Test Simple Flat UI CSS Accordion 3</a></dt>
-          <dd class="accordionItem accordionItemCollapsed">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
+            <p>Lorem ipsum dolor sit Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis illo tenetur quam. Maxime in amet repudiandae non. Aliquid consequatur veniam, voluptatum possimus sunt ea maxime officiis porro architecto. Omnis, deleniti. amet, consectetur adipiscing elit. Morbi eu interdum diam. Donec interdum porttitor risus non bibendum. Maecenas sollicitudin eros in quam imperdiet placerat. Cras justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec dignissim arcu nec elit faucibus condimentum. Donec facilisis consectetur enim sit amet varius. Pellentesque justo dui, sodales quis luctus a, iaculis eget mauris. </p>
           </dd>
         </dl>
       </div>
